# cabal-t7517

./: cabal.project
main-proj/: CHANGELOG.md  main-proj.cabal
some-lib/: CHANGELOG.md  some-lib.cabal
some-lib/src/: MyLib.hs
