cabal-version:   3.6
name:            main-proj
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable main-proj
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , some-lib
    hs-source-dirs:   app
    default-language: Haskell2010
