cabal-version:   3.6
name:            some-lib
version:         0.1.0.0
license:         NONE
author:          a.pelenitsyn@gmail.com
maintainer:      Artem Pelenitsyn
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
